@@ -1,16 +1,22 @@
 package com.tkpm.sms.infrastructure.persistence.repository;
 
+import com.tkpm.sms.domain.common.PageRequest;
 import com.tkpm.sms.domain.common.PageResponse;
+import com.tkpm.sms.domain.exception.ResourceNotFoundException;
 import com.tkpm.sms.domain.model.Course;
 import com.tkpm.sms.domain.repository.CourseRepository;
+import com.tkpm.sms.infrastructure.persistence.entity.CourseEntity;
 import com.tkpm.sms.infrastructure.persistence.jpa.CourseJpaRepository;
 import com.tkpm.sms.infrastructure.persistence.mapper.CoursePersistenceMapper;
-import jakarta.persistence.EntityNotFoundException;
+import com.tkpm.sms.infrastructure.utils.PagingUtils;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
 
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -20,17 +26,23 @@ public class CourseRepositoryImpl implements CourseRepository {
     private final CoursePersistenceMapper coursePersistenceMapper;
 
     @Override
-    public PageResponse<Course> findAll(PageRequest pageRequest) {
-        var courses = courseJpaRepository.findAll(pageRequest).stream()
+    public PageResponse<Course> findAll(PageRequest request) {
+        // Convert domain PageRequest to Spring Pageable
+        Pageable pageable = PagingUtils.toSpringPageable(request);
+
+        Page<CourseEntity> page = courseJpaRepository.findAll(pageable);
+
+        // Convert Spring Page to domain PageResponse
+        List<Course> courses = page.getContent().stream()
                 .map(coursePersistenceMapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
 
         return PageResponse.of(
                 courses,
-                courses.size(),
-                pageRequest.getPageNumber(),
-                pageRequest.getPageSize(),
-                courses.size() / pageRequest.getPageSize()
+                page.getNumber() + 1, // Convert 0-based to 1-based
+                page.getSize(),
+                page.getTotalElements(),
+                page.getTotalPages()
         );
     }
 
@@ -49,16 +61,11 @@ public class CourseRepositoryImpl implements CourseRepository {
 
     @Override
     public void deleteById(Integer id) {
-        var course = courseJpaRepository.findById(id).orElseThrow(() -> new EntityNotFoundException(
+        var course = courseJpaRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException(
                 "Course not found with id: " + id
         ));
 
-        courseJpaRepository.deleteById(id);
-    }
-
-    @Override
-    public boolean existsByCourseSchedule(String schedule) {
-        return courseJpaRepository.existsBySchedule(schedule);
+        courseJpaRepository.delete(course);
     }
 
     @Override
@@ -69,5 +76,15 @@ public class CourseRepositoryImpl implements CourseRepository {
     @Override
     public boolean existsByIdNotAndRoomAndCourseSchedule(Integer id, String room, String schedule) {
         return courseJpaRepository.existsByIdNotAndRoomAndSchedule(id, room, schedule);
+    }
+
+    @Override
+    public boolean existsByCodeAndSubjectId(String code, Integer subjectId) {
+        return courseJpaRepository.existsByCodeAndSubjectId(code, subjectId);
+    }
+
+    @Override
+    public boolean existsByCodeAndSubjectIdAndIdNot(String code, Integer subjectId, Integer id) {
+        return courseJpaRepository.existsByCodeAndSubjectIdAndIdNot(code, subjectId, id);
     }
 }
